--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,29 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
+
+@layer base {
+  body {
+    height: 100%;
+    margin: auto;
+    padding: 0;
+    background-color: rgba(0, 41, 128, 0.193);
+  text-align: center;
+  }
+  @media (prefers-color-scheme: dark) {
+    body {
+      background-color: rgba(30, 40, 60, 0.961);
+    }
+  }
+}
+html {
+  height: 100%;
+}
+.container {
+  margin: auto;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+input {
+  text-align: center;
 }
